TP5/src/ejemplo.output
Estado 22 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 2 reducción(ones)/reducción(ones)
Estado 39 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 144 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 149 conflictos: 3 reducción(ones)/reducción(ones)
Estado 156 conflictos: 4 desplazamiento(s)/reducción(ones)
Estado 157 conflictos: 29 desplazamiento(s)/reducción(ones)
Estado 230 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracionExterna
    4     | sentencia
    5     | error ';'

    6 declaracion: especDeclaracion listaDeclaradoresBis ';'

    7 especDeclaracionBis: /* vacío */
    8                    | especDeclaracion

    9 especDeclaracion: CLASE_ALMACENAMIENTO especDeclaracionBis
   10                 | especTipo especDeclaracionBis

   11 listaDeclaradoresBis: /* vacío */
   12                     | listaDeclaradores

   13 listaDeclaradores: declarador
   14                  | listaDeclaradores ',' declarador

   15 declarador: decla
   16           | decla '=' inicializador

   17 inicializador: expAsignacion
   18              | '{' listaDeInicializadores '}'

   19 listaDeInicializadores: inicializador
   20                       | listaDeInicializadores ',' inicializador

   21 especTipo: TIPO_DATO
   22          | especStructUnion
   23          | ID

   24 especStructUnion: STRUCT_UNION ID opcionLista
   25                 | STRUCT_UNION '{' listaDeclaracionesStruct '}'

   26 listaDeclaracionesStruct: declaracionStruct
   27                         | listaDeclaracionesStruct declaracionStruct

   28 declaracionStruct: listaCalificadores declaradoresStruct ';'

   29 listaCalificadores: especTipo listaCalificadoresBis

   30 listaCalificadoresBis: /* vacío */
   31                      | listaCalificadores

   32 opcionLista: /* vacío */
   33            | '{' listaDeclaracionesStruct '}'

   34 declaradoresStruct: declaStruct
   35                   | declaradoresStruct ',' declaStruct

   36 declaStruct: decla
   37            | declaBis ':' expCondicional

   38 decla: puntero declaradorDirecto
   39      | declaradorDirecto

   40 declaBis: /* vacío */
   41         | decla

   42 declaradorDirecto: ID
   43                  | declaradorDirecto '[' expCondicionalBis ']'
   44                  | declaradorDirecto '(' listaTiposParametros ')'

   45 listaTiposParametros: listaParametros
   46                     | listaParametros ',' '.' '.' '.'

   47 listaTiposParametrosBis: /* vacío */
   48                        | listaTiposParametros

   49 listaParametros: declaracionParametro
   50                | listaParametros ',' declaracionParametro

   51 declaracionParametro: especDeclaracion decla
   52                     | especDeclaracion declaradorAbstracto

   53 nombreTipo: listaCalificadores declaradorAbstractoBis

   54 declaradorAbstracto: puntero declaradorAbstractoDirecto
   55                    | declaradorAbstractoDirecto
   56                    | puntero

   57 declaradorAbstractoBis: /* vacío */
   58                       | declaradorAbstracto

   59 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
   60                           | declaradorAbstractoDirecto opcionExpresion
   61                           | opcionExpresion

   62 opcionExpresion: '[' expCondicionalBis ']'
   63                | '(' listaTiposParametrosBis ')'

   64 sentencia: sentCompuesta
   65          | sentExpresion
   66          | sentSeleccion
   67          | sentIteracion
   68          | sentSalto
   69          | sentEtiquetada

   70 sentExpresion: exp ';'
   71              | ';'

   72 sentCompuesta: '{' decalracionOSentencia '}'

   73 decalracionOSentencia: /* vacío */
   74                      | decalracionOSentencia listaDeclaraciones
   75                      | decalracionOSentencia listaSentencias

   76 listaDeclaraciones: declaracionExterna
   77                   | listaDeclaraciones declaracionExterna

   78 listaDeclaracionesBis: /* vacío */
   79                      | listaDeclaraciones

   80 listaSentencias: sentencia
   81                | listaSentencias sentencia

   82 puntero: '*'
   83        | '*' puntero

   84 sentSeleccion: IF '(' exp ')' sentencia
   85              | IF '(' exp ')' sentencia ELSE sentencia
   86              | SWITCH '(' exp ')' sentencia

   87 sentIteracion: WHILE '(' exp ')' sentencia
   88              | DO sentencia WHILE '(' exp ')' ';'
   89              | FOR '(' expOp ';' expOp ';' expOp ')' sentencia

   90 sentEtiquetada: CASE expCondicional ':' sentencia
   91               | DEFAULT ':' sentencia
   92               | ID ':' sentencia

   93 sentSalto: RETURN expOp ';'
   94          | BREAK ';'
   95          | CONTINUE ';'
   96          | GOTO ID ';'

   97 expPrimaria: ID
   98            | ENTERO
   99            | REAL
  100            | CTE_CARACTER
  101            | LITERAL_CADENA
  102            | NULL1
  103            | '(' exp ')'

  104 exp: expAsignacion
  105    | exp ',' expAsignacion

  106 expOp: /* vacío */
  107      | exp

  108 expAsignacion: expCondicional
  109              | expUnaria operAsignacion expAsignacion

  110 expCondicional: expOr
  111               | expOr '?' exp ':' expCondicional

  112 expCondicionalBis: /* vacío */
  113                  | expCondicional

  114 operAsignacion: '='
  115               | ASIGNACION_INCREMENTO
  116               | ASIGNACION_DECREMENTO
  117               | ASIGNACION_PRODUCTO
  118               | ASIGNACION_DIVISION

  119 expOr: expAnd
  120      | expOr OR expAnd

  121 expAnd: expIgualdad
  122       | expAnd AND expIgualdad

  123 expIgualdad: expRelacional
  124            | expIgualdad IGUALDAD expRelacional
  125            | expIgualdad DESIGUALDAD expRelacional

  126 expRelacional: expAditiva
  127              | expRelacional '<' expAditiva
  128              | expRelacional '>' expAditiva
  129              | expRelacional MENORIGUAL expAditiva
  130              | expRelacional MAYORIGUAL expAditiva

  131 expAditiva: expMultiplicativa
  132           | expAditiva '+' expMultiplicativa
  133           | expAditiva '-' expMultiplicativa

  134 expMultiplicativa: expUnaria
  135                  | expMultiplicativa '*' expUnaria
  136                  | expMultiplicativa '/' expUnaria
  137                  | expMultiplicativa '%' expUnaria

  138 expUnaria: expSufijo
  139          | INCREMENTO expUnaria
  140          | DECREMENTO expUnaria
  141          | '-' expUnaria
  142          | '+' expUnaria
  143          | '~' expUnaria
  144          | '!' expUnaria
  145          | '&' expUnaria
  146          | puntero expUnaria
  147          | SIZEOF '(' expUnaria ')'
  148          | SIZEOF '(' nombreTipo ')'

  149 expSufijo: expPrimaria
  150          | expSufijo '[' exp ']'
  151          | expSufijo '(' listaArgumentos ')'
  152          | expSufijo '.' ID
  153          | expSufijo FLECHA ID
  154          | expSufijo INCREMENTO
  155          | expSufijo DECREMENTO

  156 listaArgumentos: /* vacío */
  157                | expAsignacion
  158                | listaArgumentos ',' expAsignacion

  159 declaracionExterna: definicionFuncion
  160                   | declaracion

  161 definicionFuncion: especDeclaracion decla listaDeclaracionesBis sentCompuesta


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 144
'%' (37) 137
'&' (38) 145
'(' (40) 44 59 63 84 85 86 87 88 89 103 147 148 151
')' (41) 44 59 63 84 85 86 87 88 89 103 147 148 151
'*' (42) 82 83 135
'+' (43) 132 142
',' (44) 14 20 35 46 50 105 158
'-' (45) 133 141
'.' (46) 46 152
'/' (47) 136
':' (58) 37 90 91 92 111
';' (59) 5 6 28 70 71 88 89 93 94 95 96
'<' (60) 127
'=' (61) 16 114
'>' (62) 128
'?' (63) 111
'[' (91) 43 62 150
']' (93) 43 62 150
'{' (123) 18 25 33 72
'}' (125) 18 25 33 72
'~' (126) 143
error (256) 5
REAL (258) 99
ENTERO (259) 98
LITERAL_CADENA (260) 101
OR (261) 120
AND (262) 122
IGUALDAD (263) 124
DESIGUALDAD (264) 125
MAYORIGUAL (265) 130
MENORIGUAL (266) 129
INCREMENTO (267) 139 154
DECREMENTO (268) 140 155
ASIGNACION_INCREMENTO (269) 115
ASIGNACION_DECREMENTO (270) 116
ASIGNACION_PRODUCTO (271) 117
ASIGNACION_DIVISION (272) 118
FLECHA (273) 153
IF (274) 84 85
ELSE (275) 85
SWITCH (276) 86
WHILE (277) 87 88
DO (278) 88
FOR (279) 89
RETURN (280) 93
CONTINUE (281) 95
BREAK (282) 94
CASE (283) 90
DEFAULT (284) 91
GOTO (285) 96
NULL1 (286) 102
TIPO_DATO (287) 21
CLASE_ALMACENAMIENTO (288) 9
STRUCT_UNION (289) 24 25
ID (290) 23 24 42 92 96 97 152 153
SIZEOF (291) 147 148
CTE_CARACTER (292) 100


No terminales con las reglas donde aparecen

$accept (60)
    en la izquierda: 0
input (61)
    en la izquierda: 1 2, en la derecha: 0 2
line (62)
    en la izquierda: 3 4 5, en la derecha: 2
declaracion (63)
    en la izquierda: 6, en la derecha: 160
especDeclaracionBis (64)
    en la izquierda: 7 8, en la derecha: 9 10
especDeclaracion (65)
    en la izquierda: 9 10, en la derecha: 6 8 51 52 161
listaDeclaradoresBis (66)
    en la izquierda: 11 12, en la derecha: 6
listaDeclaradores (67)
    en la izquierda: 13 14, en la derecha: 12 14
declarador (68)
    en la izquierda: 15 16, en la derecha: 13 14
inicializador (69)
    en la izquierda: 17 18, en la derecha: 16 19 20
listaDeInicializadores (70)
    en la izquierda: 19 20, en la derecha: 18 20
especTipo (71)
    en la izquierda: 21 22 23, en la derecha: 10 29
especStructUnion (72)
    en la izquierda: 24 25, en la derecha: 22
listaDeclaracionesStruct (73)
    en la izquierda: 26 27, en la derecha: 25 27 33
declaracionStruct (74)
    en la izquierda: 28, en la derecha: 26 27
listaCalificadores (75)
    en la izquierda: 29, en la derecha: 28 31 53
listaCalificadoresBis (76)
    en la izquierda: 30 31, en la derecha: 29
opcionLista (77)
    en la izquierda: 32 33, en la derecha: 24
declaradoresStruct (78)
    en la izquierda: 34 35, en la derecha: 28 35
declaStruct (79)
    en la izquierda: 36 37, en la derecha: 34 35
decla (80)
    en la izquierda: 38 39, en la derecha: 15 16 36 41 51 161
declaBis (81)
    en la izquierda: 40 41, en la derecha: 37
declaradorDirecto (82)
    en la izquierda: 42 43 44, en la derecha: 38 39 43 44
listaTiposParametros (83)
    en la izquierda: 45 46, en la derecha: 44 48
listaTiposParametrosBis (84)
    en la izquierda: 47 48, en la derecha: 63
listaParametros (85)
    en la izquierda: 49 50, en la derecha: 45 46 50
declaracionParametro (86)
    en la izquierda: 51 52, en la derecha: 49 50
nombreTipo (87)
    en la izquierda: 53, en la derecha: 148
declaradorAbstracto (88)
    en la izquierda: 54 55 56, en la derecha: 52 58 59
declaradorAbstractoBis (89)
    en la izquierda: 57 58, en la derecha: 53
declaradorAbstractoDirecto (90)
    en la izquierda: 59 60 61, en la derecha: 54 55 60
opcionExpresion (91)
    en la izquierda: 62 63, en la derecha: 60 61
sentencia (92)
    en la izquierda: 64 65 66 67 68 69, en la derecha: 4 80 81 84 85
    86 87 88 89 90 91 92
sentExpresion (93)
    en la izquierda: 70 71, en la derecha: 65
sentCompuesta (94)
    en la izquierda: 72, en la derecha: 64 161
decalracionOSentencia (95)
    en la izquierda: 73 74 75, en la derecha: 72 74 75
listaDeclaraciones (96)
    en la izquierda: 76 77, en la derecha: 74 77 79
listaDeclaracionesBis (97)
    en la izquierda: 78 79, en la derecha: 161
listaSentencias (98)
    en la izquierda: 80 81, en la derecha: 75 81
puntero (99)
    en la izquierda: 82 83, en la derecha: 38 54 56 83 146
sentSeleccion (100)
    en la izquierda: 84 85 86, en la derecha: 66
sentIteracion (101)
    en la izquierda: 87 88 89, en la derecha: 67
sentEtiquetada (102)
    en la izquierda: 90 91 92, en la derecha: 69
sentSalto (103)
    en la izquierda: 93 94 95 96, en la derecha: 68
expPrimaria (104)
    en la izquierda: 97 98 99 100 101 102 103, en la derecha: 149
exp (105)
    en la izquierda: 104 105, en la derecha: 70 84 85 86 87 88 103
    105 107 111 150
expOp (106)
    en la izquierda: 106 107, en la derecha: 89 93
expAsignacion (107)
    en la izquierda: 108 109, en la derecha: 17 104 105 109 157 158
expCondicional (108)
    en la izquierda: 110 111, en la derecha: 37 90 108 111 113
expCondicionalBis (109)
    en la izquierda: 112 113, en la derecha: 43 62
operAsignacion (110)
    en la izquierda: 114 115 116 117 118, en la derecha: 109
expOr (111)
    en la izquierda: 119 120, en la derecha: 110 111 120
expAnd (112)
    en la izquierda: 121 122, en la derecha: 119 120 122
expIgualdad (113)
    en la izquierda: 123 124 125, en la derecha: 121 122 124 125
expRelacional (114)
    en la izquierda: 126 127 128 129 130, en la derecha: 123 124 125
    127 128 129 130
expAditiva (115)
    en la izquierda: 131 132 133, en la derecha: 126 127 128 129 130
    132 133
expMultiplicativa (116)
    en la izquierda: 134 135 136 137, en la derecha: 131 132 133 135
    136 137
expUnaria (117)
    en la izquierda: 138 139 140 141 142 143 144 145 146 147 148, en la derecha:
    109 134 135 136 137 139 140 141 142 143 144 145 146 147
expSufijo (118)
    en la izquierda: 149 150 151 152 153 154 155, en la derecha: 138
    150 151 152 153 154 155
listaArgumentos (119)
    en la izquierda: 156 157 158, en la derecha: 151 158
declaracionExterna (120)
    en la izquierda: 159 160, en la derecha: 3 76 77
definicionFuncion (121)
    en la izquierda: 161, en la derecha: 159


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                  desplazar e ir al estado 2
    error                 desplazar e ir al estado 3
    REAL                  desplazar e ir al estado 4
    ENTERO                desplazar e ir al estado 5
    LITERAL_CADENA        desplazar e ir al estado 6
    INCREMENTO            desplazar e ir al estado 7
    DECREMENTO            desplazar e ir al estado 8
    IF                    desplazar e ir al estado 9
    SWITCH                desplazar e ir al estado 10
    WHILE                 desplazar e ir al estado 11
    DO                    desplazar e ir al estado 12
    FOR                   desplazar e ir al estado 13
    RETURN                desplazar e ir al estado 14
    CONTINUE              desplazar e ir al estado 15
    BREAK                 desplazar e ir al estado 16
    CASE                  desplazar e ir al estado 17
    DEFAULT               desplazar e ir al estado 18
    GOTO                  desplazar e ir al estado 19
    NULL1                 desplazar e ir al estado 20
    TIPO_DATO             desplazar e ir al estado 21
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 22
    STRUCT_UNION          desplazar e ir al estado 23
    ID                    desplazar e ir al estado 24
    SIZEOF                desplazar e ir al estado 25
    CTE_CARACTER          desplazar e ir al estado 26
    '+'                   desplazar e ir al estado 27
    '-'                   desplazar e ir al estado 28
    '*'                   desplazar e ir al estado 29
    '('                   desplazar e ir al estado 30
    ';'                   desplazar e ir al estado 31
    '{'                   desplazar e ir al estado 32
    '~'                   desplazar e ir al estado 33
    '!'                   desplazar e ir al estado 34
    '&'                   desplazar e ir al estado 35

    line                ir al estado 36
    declaracion         ir al estado 37
    especDeclaracion    ir al estado 38
    especTipo           ir al estado 39
    especStructUnion    ir al estado 40
    sentencia           ir al estado 41
    sentExpresion       ir al estado 42
    sentCompuesta       ir al estado 43
    puntero             ir al estado 44
    sentSeleccion       ir al estado 45
    sentIteracion       ir al estado 46
    sentEtiquetada      ir al estado 47
    sentSalto           ir al estado 48
    expPrimaria         ir al estado 49
    exp                 ir al estado 50
    expAsignacion       ir al estado 51
    expCondicional      ir al estado 52
    expOr               ir al estado 53
    expAnd              ir al estado 54
    expIgualdad         ir al estado 55
    expRelacional       ir al estado 56
    expAditiva          ir al estado 57
    expMultiplicativa   ir al estado 58
    expUnaria           ir al estado 59
    expSufijo           ir al estado 60
    declaracionExterna  ir al estado 61
    definicionFuncion   ir al estado 62


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . ';'

    ';'  desplazar e ir al estado 63


estado 4

   99 expPrimaria: REAL .

    $default  reduce usando la regla 99 (expPrimaria)


estado 5

   98 expPrimaria: ENTERO .

    $default  reduce usando la regla 98 (expPrimaria)


estado 6

  101 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 101 (expPrimaria)


estado 7

  139 expUnaria: INCREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 65
    expSufijo    ir al estado 60


estado 8

  140 expUnaria: DECREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 66
    expSufijo    ir al estado 60


estado 9

   84 sentSeleccion: IF . '(' exp ')' sentencia
   85              | IF . '(' exp ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 67


estado 10

   86 sentSeleccion: SWITCH . '(' exp ')' sentencia

    '('  desplazar e ir al estado 68


estado 11

   87 sentIteracion: WHILE . '(' exp ')' sentencia

    '('  desplazar e ir al estado 69


estado 12

   88 sentIteracion: DO . sentencia WHILE '(' exp ')' ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    IF              desplazar e ir al estado 9
    SWITCH          desplazar e ir al estado 10
    WHILE           desplazar e ir al estado 11
    DO              desplazar e ir al estado 12
    FOR             desplazar e ir al estado 13
    RETURN          desplazar e ir al estado 14
    CONTINUE        desplazar e ir al estado 15
    BREAK           desplazar e ir al estado 16
    CASE            desplazar e ir al estado 17
    DEFAULT         desplazar e ir al estado 18
    GOTO            desplazar e ir al estado 19
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 70
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    ';'             desplazar e ir al estado 31
    '{'             desplazar e ir al estado 32
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    sentencia          ir al estado 71
    sentExpresion      ir al estado 42
    sentCompuesta      ir al estado 43
    puntero            ir al estado 44
    sentSeleccion      ir al estado 45
    sentIteracion      ir al estado 46
    sentEtiquetada     ir al estado 47
    sentSalto          ir al estado 48
    expPrimaria        ir al estado 49
    exp                ir al estado 50
    expAsignacion      ir al estado 51
    expCondicional     ir al estado 52
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 59
    expSufijo          ir al estado 60


estado 13

   89 sentIteracion: FOR . '(' expOp ';' expOp ';' expOp ')' sentencia

    '('  desplazar e ir al estado 72


estado 14

   93 sentSalto: RETURN . expOp ';'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    $default  reduce usando la regla 106 (expOp)

    puntero            ir al estado 44
    expPrimaria        ir al estado 49
    exp                ir al estado 73
    expOp              ir al estado 74
    expAsignacion      ir al estado 51
    expCondicional     ir al estado 52
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 59
    expSufijo          ir al estado 60


estado 15

   95 sentSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 75


estado 16

   94 sentSalto: BREAK . ';'

    ';'  desplazar e ir al estado 76


estado 17

   90 sentEtiquetada: CASE . expCondicional ':' sentencia

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero            ir al estado 44
    expPrimaria        ir al estado 49
    expCondicional     ir al estado 77
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 78
    expSufijo          ir al estado 60


estado 18

   91 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 79


estado 19

   96 sentSalto: GOTO . ID ';'

    ID  desplazar e ir al estado 80


estado 20

  102 expPrimaria: NULL1 .

    $default  reduce usando la regla 102 (expPrimaria)


estado 21

   21 especTipo: TIPO_DATO .

    $default  reduce usando la regla 21 (especTipo)


estado 22

    9 especDeclaracion: CLASE_ALMACENAMIENTO . especDeclaracionBis

    TIPO_DATO             desplazar e ir al estado 21
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 22
    STRUCT_UNION          desplazar e ir al estado 23
    ID                    desplazar e ir al estado 81

    ID        [reduce usando la regla 7 (especDeclaracionBis)]
    $default  reduce usando la regla 7 (especDeclaracionBis)

    especDeclaracionBis  ir al estado 82
    especDeclaracion     ir al estado 83
    especTipo            ir al estado 39
    especStructUnion     ir al estado 40


estado 23

   24 especStructUnion: STRUCT_UNION . ID opcionLista
   25                 | STRUCT_UNION . '{' listaDeclaracionesStruct '}'

    ID   desplazar e ir al estado 84
    '{'  desplazar e ir al estado 85


estado 24

   23 especTipo: ID .
   92 sentEtiquetada: ID . ':' sentencia
   97 expPrimaria: ID .

    ':'  desplazar e ir al estado 86

    TIPO_DATO             reduce usando la regla 23 (especTipo)
    CLASE_ALMACENAMIENTO  reduce usando la regla 23 (especTipo)
    STRUCT_UNION          reduce usando la regla 23 (especTipo)
    ID                    reduce usando la regla 23 (especTipo)
    '*'                   reduce usando la regla 23 (especTipo)
    '*'                   [reduce usando la regla 97 (expPrimaria)]
    ';'                   reduce usando la regla 23 (especTipo)
    ';'                   [reduce usando la regla 97 (expPrimaria)]
    $default              reduce usando la regla 97 (expPrimaria)


estado 25

  147 expUnaria: SIZEOF . '(' expUnaria ')'
  148          | SIZEOF . '(' nombreTipo ')'

    '('  desplazar e ir al estado 87


estado 26

  100 expPrimaria: CTE_CARACTER .

    $default  reduce usando la regla 100 (expPrimaria)


estado 27

  142 expUnaria: '+' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 88
    expSufijo    ir al estado 60


estado 28

  141 expUnaria: '-' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 89
    expSufijo    ir al estado 60


estado 29

   82 puntero: '*' .
   83        | '*' . puntero

    $default  reduce usando la regla 82 (puntero)

    puntero  ir al estado 90


estado 30

  103 expPrimaria: '(' . exp ')'

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero            ir al estado 44
    expPrimaria        ir al estado 49
    exp                ir al estado 91
    expAsignacion      ir al estado 51
    expCondicional     ir al estado 52
    expOr              ir al estado 53
    expAnd             ir al estado 54
    expIgualdad        ir al estado 55
    expRelacional      ir al estado 56
    expAditiva         ir al estado 57
    expMultiplicativa  ir al estado 58
    expUnaria          ir al estado 59
    expSufijo          ir al estado 60


estado 31

   71 sentExpresion: ';' .

    $default  reduce usando la regla 71 (sentExpresion)


estado 32

   72 sentCompuesta: '{' . decalracionOSentencia '}'

    $default  reduce usando la regla 73 (decalracionOSentencia)

    decalracionOSentencia  ir al estado 92


estado 33

  143 expUnaria: '~' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 93
    expSufijo    ir al estado 60


estado 34

  144 expUnaria: '!' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 94
    expSufijo    ir al estado 60


estado 35

  145 expUnaria: '&' . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 64
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 33
    '!'             desplazar e ir al estado 34
    '&'             desplazar e ir al estado 35

    puntero      ir al estado 44
    expPrimaria  ir al estado 49
    expUnaria    ir al estado 95
    expSufijo    ir al estado 60


estado 36

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 37

  160 declaracionExterna: declaracion .

    $default  reduce usando la regla 160 (declaracionExterna)


estado 38

    6 declaracion: especDeclaracion . listaDeclaradoresBis ';'
  161 definicionFuncion: especDeclaracion . decla listaDeclaracionesBis sentCompuesta

    ID   desplazar e ir al estado 96
    '*'  desplazar e ir al estado 29

    $default  reduce usando la regla 11 (listaDeclaradoresBis)
